docs/Full-AI-Gateway-Example/Authorino/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ai-gateway-auth
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-ai-gateway-basic
  extAuth:
    grpc:
      backendRef:
        name: authorino-authorino-authorization
        namespace: default
        port: 50051
    failOpen: false
